istio-08-split-req/rest-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-apl             # Istio管理対象の名前空間
  labels:
    istio-injection: enabled  # Istio-proxyサイドカーの自動注入
